--- a/exercise1.html
+++ b/exercise1.html
@@ -1,1 +1,10 @@
 <!DOCType html>
+<html>
+  <head>
+    <title> My HTML Skeleton :D </title>
+    <meta charset = "UTF-8">
+  </head>
+<body>
+  
+</body>
+</html>
