--- a/exercise1.html
+++ b/exercise1.html
@@ -1,10 +1,29 @@
-<!DOCType html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title> My HTML Skeleton :D </title>
-    <meta charset = "UTF-8">
-  </head>
-<body>
-  
-</body>
+    <head>
+        <title> HTML Skeleton File </title>
+        <meta charset = "UTF-8">
+    </head>
+
+    <body>
+        <!--  Place a header section -->
+        <header> 
+            <h1> This is the largest heading you can create. </h1>
+            <nav> 
+                <!-- Lists will eventually go here -->
+            </nav>
+        </header>
+
+        <main>
+        <!-- Place a paragraph section -->
+        <p> This is a paragraph tag. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Fugiat reprehenderit corrupti nulla, quo accusamus recusandae voluptas animi alias
+            atque accusantium, unde nam? Assumenda incidunt id cupiditate voluptas perspiciatis,
+            recusandae ducimus.</p>
+        </main>
+
+        <footer>
+            <!-- Footer content will go in here -->
+        </footer>
+    </body>
 </html>
