--- a/about.html
+++ b/about.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> About ME Page </title>
+        <meta charset = "UTF-8">
+    </head>
 
+    <body>
+        <!--  Place a header section -->
+        <header> 
+            <h1>  </h1>
+            <nav> 
+            </nav>
+        </header>
+
+        <main>
+        <p> </p>
+        </main>
+
+        <footer>
+            <!-- Footer content will go in here -->
+        </footer>
+    </body>
+</html>
